--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,28 +4,15 @@ user=genieacs
 
 [program:genieacs-cwmp]
 directory=/opt/genieacs
-command=/usr/bin/run_with_env.sh /opt/genieacs/genieacs.env /opt/genieacs/dist/bin/genieacs-cwmp
-stdout_logfile=/var/log/genieacs/genieacs-cwmp.log
-stderr_logfile=/var/log/genieacs/genieacs-cwmp.log
+command=/usr/bin/run_with_env.sh /opt/node_modules/genieacs/bin/genieacs-cwmp
 autorestart=true
 
 [program:genieacs-nbi]
 directory=/opt/genieacs
-command=/usr/bin/run_with_env.sh /opt/genieacs/genieacs.env /opt/genieacs/dist/bin/genieacs-nbi
-stdout_logfile=/var/log/genieacs/genieacs-nbi.log
-stderr_logfile=/var/log/genieacs/genieacs-nbi.log
+command=/usr/bin/run_with_env.sh /opt/node_modules/genieacs/bin/genieacs-nbi
 autorestart=true
 
 [program:genieacs-fs]
 directory=/opt/genieacs
-command=/usr/bin/run_with_env.sh /opt/genieacs/genieacs.env /opt/genieacs/dist/bin/genieacs-fs
-stdout_logfile=/var/log/genieacs/genieacs-fs.log
-stderr_logfile=/var/log/genieacs/genieacs-fs.log
-autorestart=true
-
-[program:genieacs-ui]
-directory=/opt/genieacs
-command=/usr/bin/run_with_env.sh /opt/genieacs/genieacs.env /opt/genieacs/dist/bin/genieacs-ui
-stdout_logfile=/var/log/genieacs/genieacs-ui.log
-stderr_logfile=/var/log/genieacs/genieacs-ui.log
+command=/usr/bin/run_with_env.sh /opt/node_modules/genieacs/bin/genieacs-fs
 autorestart=true
