--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,16 +3,22 @@ nodaemon=true
 user=genieacs
 
 [program:genieacs-cwmp]
-directory=/opt/genieacs
+directory=/opt/
 command=/usr/bin/run_with_env.sh /opt/node_modules/genieacs/bin/genieacs-cwmp
+stdout_logfile=/var/log/genieacs/genieacs-cwmp.log
+stderr_logfile=/var/log/genieacs/genieacs-cwmp.log
 autorestart=true
 
 [program:genieacs-nbi]
-directory=/opt/genieacs
+directory=/opt/
 command=/usr/bin/run_with_env.sh /opt/node_modules/genieacs/bin/genieacs-nbi
+stdout_logfile=/var/log/genieacs/genieacs-nbi.log
+stderr_logfile=/var/log/genieacs/genieacs-nbi.log
 autorestart=true
 
 [program:genieacs-fs]
-directory=/opt/genieacs
+directory=/opt/
 command=/usr/bin/run_with_env.sh /opt/node_modules/genieacs/bin/genieacs-fs
+stdout_logfile=/var/log/genieacs/genieacs-fs.log
+stderr_logfile=/var/log/genieacs/genieacs-fs.log
 autorestart=true
