--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 nodaemon=true
-user=genieacs
+user=root
 
 [program:genieacs-cwmp]
 directory=/opt/
@@ -21,4 +21,10 @@ directory=/opt/
 command=/usr/bin/run_with_env.sh /opt/node_modules/genieacs/bin/genieacs-fs
 stdout_logfile=/var/log/genieacs/genieacs-fs.log
 stderr_logfile=/var/log/genieacs/genieacs-fs.log
+autorestart=true
+
+[program:genieacs-gui]
+command=/opt/startscript.sh
+stdout_logfile=/var/log/genieacs/genieacs-gui.log
+stderr_logfile=/var/log/genieacs/genieacs-gui.log
 autorestart=true
